# dungeons-and-dragons-two-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  dungeons-and-dragons-two.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  dungeons-and-dragons-two.rockspec  dungeons-and-dragons-two_sdk.lua  dungeons-and-dragons-two_types.lua  features.lua
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  dungeonsanddragonstwo_sdk.py  dungeonsanddragonstwo_types.py  features.py  pyproject.toml
py/core/: context.py  control.py  operation.py
py/entity/: class_entity.py  feature_entity.py  monster_entity.py  spell_entity.py
py/feature/: cache_feature.py  clienttrack_feature.py  idempotency_feature.py  rbac_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_class_direct.py  test_class_entity.py  test_exists.py  test_feature_direct.py  test_feature_entity.py  test_monster_direct.py  test_monster_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_spell_direct.py  test_spell_entity.py
py/utility/: clean.py  done.py  feature_add.py  fetcher.py  make_error.py  make_fetch_def.py  make_point.py  make_response.py  param.py  prepare_auth.py  prepare_body.py  prepare_query.py  register.py  transform_response.py
(+484 files in other folders)
